[package]
name = "dylints_updater"
version = "0.1.0"
authors = ["Grzegorz Wierzowiecki <gww@parity.io>"]
description = "Updating dylint lints made easy!"
edition = "2018"
readme = "README.md"
categories = ["development-tools"]
keywords = ["rust", "dylint", "lint"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#envmnt = "^0.9.0"        # Environment variables utility functions.
derive-new = "^0.5.9"     # `#[derive(new)]` implements simple constructor functions for structs and enums.
ansi_term = "^0.12"       # coloring
anyhow = "1.0"            # Flexible concrete Error type built on std::error::Error
